NEW: Se añade la dependencia del plugin de Sonido ( Media )

--- a/plugin.xml
+++ b/plugin.xml
@@ -19,6 +19,8 @@
 
 	<license>MIT</license>
 
+    <dependency id="org.apache.cordova.media" version=">=0.2.0" />
+
 	<js-module src="www/PushNotification.js" name="PushNotification">
         <clobbers target="PushNotification" />
 	</js-module>
